storeit_macros/tests/ui/fail/entity_invalid_meta.stderr
error: proc-macro derive panicked
 --> tests/ui/fail/entity_invalid_meta.rs:3:10
  |
3 | #[derive(Entity)]
  |          ^^^^^^
  |
  = help: message: Invalid #[fetch(column = "...")] syntax: Error("expected `=`")
